Another attempt to fix CI build error

--- a/MightyLittleGeodesy/MightyLittleGeodesy.csproj
+++ b/MightyLittleGeodesy/MightyLittleGeodesy.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard1.2;net45;net40;portable-net45+win8+wpa81+wp8</TargetFrameworks>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   
