--- a/MightyLittleGeodesyTests/MightyLittleGeodesyTests.csproj
+++ b/MightyLittleGeodesyTests/MightyLittleGeodesyTests.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <RuntimeFrameworkVersion>2.1.7</RuntimeFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>   
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
